[package]
name = "bitfix"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1.0.72"
libc = "0.2.168"
patternsleuth_scanner = { git = "https://github.com/trumank/patternsleuth", version = "0.1.0" }
patternsleuth = { git = "https://github.com/trumank/patternsleuth", version = "0.1.0", features = ["image-pe", "image-elf", "process-internal"] }
proxy_dll = { git = "https://github.com/trumank/proxy_dll.git", version = "0.1.0" }
rlua = "0.19.7"
simple-log = "1.6.0"
windows = { version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_ProcessStatus",
] }
